--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,8 @@
     "deploy": "wrangler deploy --minify"
   },
   "dependencies": {
-    "hono": "^4.6.13"
+    "hono": "^4.6.13",
+    "posthog-js": "^1.200.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241112.0",
