--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
 	},
 	"dependencies": {
 		"@tabler/icons-svelte": "^3.24.0",
-		"date-fns": "^4.1.0"
+		"date-fns": "^4.1.0",
+		"posthog-js": "^1.200.1"
 	}
 }
