--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241112.0",
+    "@types/node": "^22.10.2",
     "wrangler": "^3.88.0"
   }
 }
